Updated about us page

--- a/app/templates/aboutUs.html
+++ b/app/templates/aboutUs.html
@@ -36,7 +36,10 @@
           <div class="container">
             <h2>Ji-Oh Kim</h2>
             <p class="title">University of Toronto</p>
-            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+            <p>Hello! My name is Ji-Oh Kim and I am a Computer Engineering student at the University of Toronto.
+            I am intersted in software development, (anything that has purposes- from mini games to mapping software) and project management. 
+            In my free time, I like to play tennis and explore the nature!
+             </p>
             <a href="https://www.linkedin.com/in/jioh-kim/"><i class="fa fa-linkedin"></i></a>
             <a href="https://github.com/jioh-kim"><i class="fa fa-github"></i></a>
             
