--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -44,27 +44,6 @@
 
 				</div>
 
-
-			<!-- Main -->
-				<div class="wrapper style2">
-					<article id="main" class="container special">
-						<a href="#" class="image featured"><img src="../static/img/pic06.jpg" alt="" /></a>
-						<header>
-							<h2><a href="#">Hello!</a></h2>
-							<p>
-								We are Gibson, Valerie, Ji-Oh, and Shivi.
-							</p>
-						</header>
-						<p>
-							This website contains information about us, links to our socials, and our blogs throughout our journey of being an MLH Fellow! Click the button below to get to know about us!
-						</p>
-						<footer>
-							<a href="/aboutus" class="button">About us</a>
-						</footer>
-					</article>
-
-				</div>
-
 			<!-- Features -->
 				<div class="wrapper style1">
 
@@ -74,7 +53,7 @@
 						</header>
 						<div class="row">
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="../static/img/pic09.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="../static/img/gibson.png" alt="" /></a>
 								<header>
 									<h3><a href="#">Gibson</a></h3>
 								</header>
@@ -83,7 +62,7 @@
 								</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="../static/img/pic08.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="../static/img/valerie.png" alt="" /></a>
 								<header>
 									<h3><a href="#">Valerie</a></h3>
 								</header>
@@ -92,7 +71,7 @@
 								</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="../static/img/pic09.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="../static/img/jioh.png" alt="" /></a>
 								<header>
 									<h3><a href="#">Ji-Oh Kim</a></h3>
 								</header>
@@ -101,7 +80,7 @@
 								</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="../static/img/pic09.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="../static/img/shivi.png"alt="" /></a>
 								<header>
 									<h3><a href="#">Shivi</a></h3>
 								</header>
