changed the main homepage to the original and removed main header in index.html and added respected images for funfacts

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -53,7 +53,7 @@
 						</header>
 						<div class="row">
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="../static/img/gibson.png" alt="" /></a>
+								<a href="#" class="image featured"><img src="../static/img/me.png" alt="" /></a>
 								<header>
 									<h3><a href="#">Gibson</a></h3>
 								</header>
@@ -62,7 +62,7 @@
 								</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="../static/img/valerie.png" alt="" /></a>
+								<a href="#" class="image featured"><img src="../static/img/valerie.jpg" alt="" /></a>
 								<header>
 									<h3><a href="#">Valerie</a></h3>
 								</header>
@@ -80,7 +80,7 @@
 								</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="../static/img/shivi.png"alt="" /></a>
+								<a href="#" class="image featured"><img src="../static/img/shivi.jpg"alt="" /></a>
 								<header>
 									<h3><a href="#">Shivi</a></h3>
 								</header>
