testing git user change

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -58,7 +58,7 @@
 									<h3><a href="#">Gibson</a></h3>
 								</header>
 								<p>
-								Fun fact about gibson
+								I was named after a famous guitar brand but I don't play the guitar
 								</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
