--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -17,7 +17,7 @@
         <a href="#">Shivi</a>
     </div>
     <div class="content">
-       <h1>are Team 1!!</h1>
+       <h1>Hey we are Team 1!!</h1>
        <p>We are passionate about technology!!
        </p>
     </div>
